# alloy

./: Cargo.toml
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/src/: app.rs  app_state.rs  cli.rs  image_cache.rs  image_encoder.rs  image_proto.rs  keymap.rs  lib.rs  main.rs  preview_worker.rs  ui.rs
crates/app/tests/: terminal_integration.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  document.rs  errors.rs  lib.rs  links.rs  modes.rs  search.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: engine.rs  highlight.rs  lib.rs
crates/markdown/src/engines/: comrak.rs  pulldown.rs
crates/markdown/src/engines/snapshots/: markdown__engines__comrak__tests__snapshot_basic_md_html.snap  markdown__engines__comrak__tests__snapshot_code_md_html.snap  markdown__engines__comrak__tests__snapshot_lists_md_html.snap  markdown__engines__pulldown__tests__snapshot_basic_md.snap  markdown__engines__pulldown__tests__snapshot_blockquote_md.snap  markdown__engines__pulldown__tests__snapshot_code_md.snap  markdown__engines__pulldown__tests__snapshot_highlight_empty_lang.snap  markdown__engines__pulldown__tests__snapshot_highlight_python.snap  markdown__engines__pulldown__tests__snapshot_highlight_rust.snap  markdown__engines__pulldown__tests__snapshot_highlight_unknown_lang.snap  markdown__engines__pulldown__tests__snapshot_lists_md.snap
crates/markdown/tests/fixtures/: basic.md  blockquote.md  code.md  highlight_empty_lang.md  highlight_python.md  highlight_rust.md  highlight_unknown_lang.md  images.md  lists.md
