[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "alloy"
path = "src/main.rs"

[dependencies]
alloy-core.path = "../../crates/core"
markdown.path = "../../crates/markdown"

ratatui.workspace = true
crossterm.workspace = true

tui-textarea = { version = "0.7", features = ["crossterm"] }

anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true

scopeguard = "1.2.0"
