[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "alloy"
path = "src/main.rs"

[dependencies]
alloy-core.path = "../../crates/core"
markdown.path = "../../crates/markdown"

crossterm.workspace = true
ratatui.workspace = true

tui-textarea = { version = "0.7", features = ["crossterm", "search"] }

anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

regex = "1.12.3"
scopeguard = "1.2.0"
webbrowser = "1.2.0"

[dev-dependencies]
tempfile.workspace = true
