[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "alloy"
path = "src/main.rs"

[dependencies]
alloy-core.path = "../../crates/core"
markdown.path = "../../crates/markdown"

ratatui.workspace = true

image = { version = "0.25.10", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "webp"
] }
ratatui-image = { version = "10.0.6", default-features = false, features = [
  "image-defaults",
  "crossterm"
] }
ratatui-textarea = { version = "0.8.0", features = ["crossterm", "search"] }

anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

regex = "1.12.3"
scopeguard = "1.2.0"
supports-hyperlinks = "3.2.0"
ureq = "3.3.0"
webbrowser = "1.2.0"

[dev-dependencies]
tempfile.workspace = true
