[package]
name = "markdown"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-core.path = "../../crates/core"

anyhow.workspace = true
ratatui.workspace = true
thiserror.workspace = true
tracing.workspace = true

comrak = { version = "0.51.0", default-features = false }
pulldown-cmark = { version = "0.13.1", default-features = false }
syntect = { version = "5.3.0", default-features = false, features = [
  "default-fancy"
] }

[dev-dependencies]
insta = { version = "1.46.3", features = ["filters"] }
tempfile.workspace = true
